@@ -36,6 +36,9 @@
    - jakob@cvs.openbsd.org 2003/10/14 19:43:23
      [README.dns]
      update
+   - markus@cvs.openbsd.org 2003/10/14 19:54:39
+     [session.c ssh-agent.c]
+     10X for mkdtemp; djm@
 
 20031009
  - (dtucker) [sshd_config.5] UsePAM defaults to "no".  ok djm@
@@ -1353,4 +1356,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3078 2003/10/15 06:07:53 dtucker Exp $
+$Id: ChangeLog,v 1.3079 2003/10/15 06:10:25 dtucker Exp $
